--- a/index.html
+++ b/index.html
@@ -75,7 +75,36 @@
                 </div>
         </div>
     </div>
-
+<section class="contact" id="contact">
+    <div class="titre">
+        <h2 class="titre-texte"><span>C</span>ontact</h2>
+        <p>Cliquez sur une icône pour nous joindre !</p>
+    </div>
+    <div class="contenu-contact">
+        <div class="contact-box">
+            <a href="tel:+33600000000">
+                <img src="https://cdn-icons-png.flaticon.com/512/3059/3059590.png" alt="Téléphone">
+                <h3>Appelez-nous</h3>
+                <p>06 00 00 00 00</p>
+            </a>
+        </div>
+        <div class="contact-box">
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
+                <h3>Instagram</h3>
+                <p>@mon_pseudo</p>
+            </a>
+        </div>
+        <div class="contact-box">
+            <a href="https://www.tiktok.com" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
+                <h3>TikTok</h3>
+                <p>@mon_pseudo</p>
+            </a>
+        </div>
+    </div>
+</section>
     <script src="script.js"></script>
 </body>
 </html>
+
