--- a/index.html
+++ b/index.html
@@ -1,69 +1,116 @@
-/* SECTION CONTACT CORRIGÉE */
-.contact { 
-    padding: 100px 50px; 
-    text-align: center; 
-    background: #fff; 
-}
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mes Petits Délices | Pâtisserie Artisanale</title>
+    <link rel="stylesheet" href="style.css"> 
+</head>
+<body>
+    <header>
+        <a href="#" class="logo">Resto<span>.</span></a>
+        <div class="menuToggle" onclick="toggleMenu();"></div>
+        <ul class="navbar">
+            <li><a href="#accueil" onclick="toggleMenu();">Accueil</a></li>
+            <li><a href="#propos" onclick="toggleMenu();">À propos</a></li>
+            <li><a href="#menu" onclick="toggleMenu();">Menu</a></li>
+            <li><a href="#avis" onclick="toggleMenu();">Avis</a></li>
+            <li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
+        </ul>
+    </header>
 
-.contenu-contact { 
-    display: flex; 
-    justify-content: center; 
-    flex-wrap: wrap; 
-    margin-top: 40px; 
-}
+    <section class="banniere" id="accueil">
+        <div class="contenu">
+            <h2>Que Du Goût</h2>
+            <p>Pâtisseries artisanales faites avec amour et produits locaux.</p>
+            <a href="#menu" class="btn">Voir les douceurs</a>
+        </div>
+    </section>
 
-.contact-box { 
-    width: 250px; /* Légèrement plus petit pour plus d'élégance */
-    margin: 15px; 
-    padding: 20px; 
-    background: #f9f9f9; 
-    border-radius: 15px; 
-    transition: 0.3s; 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    <section class="propos" id="propos">
+        <div class="row">
+            <div class="col50">
+                <h2 class="titre-texte"><span>A</span> Propos de Nous</h2>
+                <p>Nous sélectionnons les meilleurs ingrédients : Beurre AOP, chocolat de dégustation et fruits de saison pour des créations d'exception.</p>
+            </div>
+            <div class="col50">
+                <div class="imgAj">
+                    <img src="https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg" alt="Nos pâtisseries">
+                </div>
+            </div>
+        </div>
+    </section>
 
-/* TAILLE DES LOGOS (CORRECTION ICI) */
-.contact-box img { 
-    width: 40px;      /* Taille fixe beaucoup plus discrète */
-    height: 40px;     /* Assure un ratio carré */
-    margin-bottom: 15px; 
-    object-fit: contain;
-}
+    <section class="menu" id="menu">
+        <div class="titre">
+            <h2 class="titre-texte">Notre <span>M</span>enu</h2>
+            <p>Découvrez nos collections gourmandes.</p>
+        </div>
+        <div class="contenu">
+            <div class="box" onclick="ouvrirGalerie('gateaux')">
+                <div class="imbox">
+                    <img src="https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg" alt="Gâteaux">
+                </div>
+                <div class="text"><h3>Pâtisseries Fines</h3></div>
+            </div>
+            <div class="box" onclick="ouvrirGalerie('burgers')">
+                <div class="imbox">
+                    <img src="https://images.pexels.com/photos/70497/pexels-photo-70497.jpeg" alt="Salé">
+                </div>
+                <div class="text"><h3>Côté Salé</h3></div>
+            </div>
+        </div>
+    </section>
 
-.contact-box h3 { 
-    color: #ff0157; 
-    font-size: 1.1em; /* Texte plus fin */
-    margin-bottom: 5px; 
-}
+    <section class="avis" id="avis">
+        <div class="titre">
+            <h2 class="titre-texte">Ce qu'ils en <span>D</span>isent</h2>
+        </div>
+        <div class="contenu">
+            <div class="box-avis">
+                <p>"Le gâteau d'anniversaire était aussi beau que bon. Une vraie réussite !"</p>
+                <h4>- Sophie L.</h4>
+            </div>
+            <div class="box-avis">
+                <p>"Enfin des vrais produits frais. Le goût du fait maison se sent à chaque bouchée."</p>
+                <h4>- Marc A.</h4>
+            </div>
+        </div>
+    </section>
 
-.contact-box p {
-    font-size: 0.9em;
-}
+    <section class="contact" id="contact">
+        <div class="titre">
+            <h2 class="titre-texte"><span>C</span>ontact</h2>
+            <p>Commandez ou posez vos questions !</p>
+        </div>
+        <div class="contenu-contact">
+            <div class="contact-box">
+                <a href="tel:+33600000000">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3059/3059590.png" alt="Téléphone">
+                    <h3>Appeler</h3>
+                </a>
+            </div>
+            <div class="contact-box">
+                <a href="https://www.instagram.com" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
+                    <h3>Instagram</h3>
+                </a>
+            </div>
+        </div>
+    </section>
 
-.contact-box a { 
-    text-decoration: none; 
-    color: #111; 
-    width: 100%; /* Permet de cliquer sur toute la zone */
-}
+    <a href="https://wa.me/33600000000" class="whatsapp-float" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/3670/3670051.png" alt="WhatsApp">
+    </a>
 
-.contact-box:hover { 
-    background: #ff0157; 
-    transform: translateY(-5px); 
-}
+    <div id="fenetreGalerie" class="modale">
+        <div class="modale-contenu">
+            <span class="bouton-fermer" onclick="fermerGalerie()">&times;</span>
+            <h2 id="titreGalerie">Nos créations</h2>
+            <div class="grille-photos" id="contenuPhotos"></div>
+        </div>
+    </div>
 
-/* On change la couleur de l'icône au survol si nécessaire */
-.contact-box:hover h3, 
-.contact-box:hover p { 
-    color: #fff; 
-}
-
-/* Adaptation Mobile pour les boîtes */
-@media (max-width: 991px) {
-    .contact-box {
-        width: 100%;
-        max-width: 300px;
-        margin: 10px auto;
-    }
-}
+    <script src="script.js"></script>
+</body>
+</html>
