--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="col50">
                 <div class="imgAj">
-                    <img src="https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg" alt="image propos">
+                    <img src="https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg" alt="image">
                 </div>
             </div>
         </div>
