--- a/index.html
+++ b/index.html
@@ -22,73 +22,22 @@
     <section class="banniere" id="accueil">
         <div class="contenu">
             <h2>Que Du Goût</h2>
-            <p>Découvrez une expérience culinaire unique avec nos créations artisanales.</p>
+            <p>Découvrez une expérience culinaire unique.</p>
             <a href="#menu" class="btn">Notre Menu</a>
-        </div>
-    </section>
-
-    <section class="qualite">
-        <div class="contenu-qualite">
-            <div class="box-qualite">
-                <img src="https://cdn-icons-png.flaticon.com/512/3227/3227847.png" alt="Blé">
-                <h3>Farine Bio</h3>
-                <p>Issue de circuits courts</p>
-            </div>
-            <div class="box-qualite">
-                <img src="https://cdn-icons-png.flaticon.com/512/3050/3050158.png" alt="Oeuf">
-                <h3>Œufs Frais</h3>
-                <p>Poules élevées en plein air</p>
-            </div>
-            <div class="box-qualite">
-                <img src="https://cdn-icons-png.flaticon.com/512/3141/3141042.png" alt="Beurre">
-                <h3>Beurre AOP</h3>
-                <p>Pour un feuilletage parfait</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="propos" id="propos">
-        <div class="row">
-            <div class="col50">
-                <h2 class="titre-texte"><span>A</span> Propos de Nous</h2>
-                <p>Nous utilisons des produits frais et locaux pour garantir la meilleure qualité possible à nos clients.<br><br>Notre équipe est passionnée par l'art de la cuisine et l'innovation constante.</p>
-            </div>
-            <div class="col50">
-                <div class="imgAj">
-                    <img src="https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg" alt="image propos">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="moment">
-        <div class="carte-moment">
-            <div class="badge-special">Limité</div>
-            <div class="text-moment">
-                <h3>La suggestion du chef</h3>
-                <h2>Le Fraisier du Weekend</h2>
-                <p>Une crème mousseline légère, des fraises de saison et un biscuit moelleux. Disponible uniquement samedi et dimanche !</p>
-                <a href="#contact" class="btn">Commander</a>
-            </div>
         </div>
     </section>
 
     <section class="menu" id="menu">
         <div class="titre">
             <h2 class="titre-texte">Notre <span>M</span>enu</h2>
-            <p>Cliquez sur une catégorie pour voir nos délices.</p>
         </div>
         <div class="contenu">
             <div class="box" onclick="ouvrirGalerie('gateaux')">
-                <div class="imbox">
-                    <img src="https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg" alt="Gâteaux">
-                </div>
+                <div class="imbox"><img src="https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg"></div>
                 <div class="text"><h3>Spécialités Sucrées</h3></div>
             </div>
             <div class="box" onclick="ouvrirGalerie('burgers')">
-                <div class="imbox">
-                    <img src="https://images.pexels.com/photos/70497/pexels-photo-70497.jpeg" alt="Burgers">
-                </div>
+                <div class="imbox"><img src="https://images.pexels.com/photos/70497/pexels-photo-70497.jpeg"></div>
                 <div class="text"><h3>Menus Gourmands</h3></div>
             </div>
         </div>
@@ -98,45 +47,15 @@
         <div class="titre">
             <h2 class="titre-texte">Ce que nos <span>C</span>lients disent</h2>
         </div>
-        <div class="contenu-avis">
-            <div class="bulle-avis">
-                <p>"Le gâteau d'anniversaire de mon fils était magnifique et délicieux ! Une équipe à l'écoute."</p>
-                <h4>- Marie L.</h4>
+        <div class="contenu-avis" id="listeAvis">
             </div>
-            <div class="bulle-avis">
-                <p>"Le meilleur Paris-Brest que j'ai mangé. On sent la qualité des ingrédients."</p>
-                <h4>- Thomas V.</h4>
-            </div>
-        </div>
-    </section>
-
-    <section class="contact" id="contact">
-        <div class="titre">
-            <h2 class="titre-texte"><span>C</span>ontact</h2>
-            <p>Retrouvez-nous sur nos réseaux ou appelez-nous !</p>
-        </div>
-        <div class="contenu-contact">
-            <div class="contact-box">
-                <a href="tel:+33600000000">
-                    <img src="https://cdn-icons-png.flaticon.com/512/3059/3059590.png" alt="Téléphone">
-                    <h3>Téléphone</h3>
-                    <p>06 00 00 00 00</p>
-                </a>
-            </div>
-            <div class="contact-box">
-                <a href="https://www.instagram.com" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
-                    <h3>Instagram</h3>
-                    <p>@mes_petits_delices</p>
-                </a>
-            </div>
-            <div class="contact-box">
-                <a href="https://www.tiktok.com" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
-                    <h3>TikTok</h3>
-                    <p>@mes_petits_delices</p>
-                </a>
-            </div>
+        <div class="form-avis">
+            <h3>Laissez votre avis</h3>
+            <form id="formAvis">
+                <input type="text" name="name" placeholder="Votre Prénom" required>
+                <textarea name="message" placeholder="Votre commentaire..." required></textarea>
+                <button type="submit" class="btn">Publier l'avis</button>
+            </form>
         </div>
     </section>
 
@@ -148,6 +67,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
