--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
         </div>
     </section>
 
+    <section class="propos" id="propos">
+        <div class="row">
+            <div class="col50">
+                <h2 class="titre-texte"><span>A</span> Propos de Nous</h2>
+                <p>Nous utilisons des produits frais et locaux pour garantir la meilleure qualité possible.</p>
+            </div>
+            <div class="col50">
+                <div class="imgAj">
+                    <img src="https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="menu" id="menu">
         <div class="titre">
             <h2 class="titre-texte">Notre <span>M</span>enu</h2>
@@ -48,7 +62,8 @@
             <h2 class="titre-texte">Ce que nos <span>C</span>lients disent</h2>
         </div>
         <div class="contenu-avis" id="listeAvis">
-            </div>
+            <p>Chargement des avis...</p>
+        </div>
         <div class="form-avis">
             <h3>Laissez votre avis</h3>
             <form id="formAvis">
@@ -56,6 +71,26 @@
                 <textarea name="message" placeholder="Votre commentaire..." required></textarea>
                 <button type="submit" class="btn">Publier l'avis</button>
             </form>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <div class="titre">
+            <h2 class="titre-texte"><span>C</span>ontact</h2>
+        </div>
+        <div class="contenu-contact">
+            <div class="contact-box">
+                <a href="https://www.instagram.com" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" style="width:50px">
+                    <h3>Instagram</h3>
+                </a>
+            </div>
+            <div class="contact-box">
+                <a href="https://www.tiktok.com" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" style="width:50px">
+                    <h3>TikTok</h3>
+                </a>
+            </div>
         </div>
     </section>
 
