--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mes Petits Délices | Que Du Goût</title>
+    <title>Resto - Que Du Goût</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -27,23 +27,19 @@
         </div>
     </section>
 
-    <section class="propos" id="propos">
-        <div class="row">
-            <div class="col50">
-                <h2 class="titre-texte"><span>A</span> Propos de Nous</h2>
-                <p>Nous utilisons des produits frais et locaux pour garantir la meilleure qualité possible.</p>
-            </div>
-            <div class="col50">
-                <div class="imgAj">
-                    <img src="https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg">
-                </div>
-            </div>
+    <section class="moment">
+        <div class="carte-moment">
+            <div class="badge-special">Limité</div>
+            <h3>La suggestion du chef</h3>
+            <h2>Le Fraisier du Weekend</h2>
+            <a href="#contact" class="btn">COMMANDER</a>
         </div>
     </section>
 
     <section class="menu" id="menu">
         <div class="titre">
             <h2 class="titre-texte">Notre <span>M</span>enu</h2>
+            <p>Cliquez sur une catégorie pour voir nos délices.</p>
         </div>
         <div class="contenu">
             <div class="box" onclick="ouvrirGalerie('gateaux')">
@@ -62,10 +58,8 @@
             <h2 class="titre-texte">Ce que nos <span>C</span>lients disent</h2>
         </div>
         <div class="contenu-avis" id="listeAvis">
-            <p>Chargement des avis...</p>
-        </div>
+            </div>
         <div class="form-avis">
-            <h3>Laissez votre avis</h3>
             <form id="formAvis">
                 <input type="text" name="name" placeholder="Votre Prénom" required>
                 <textarea name="message" placeholder="Votre commentaire..." required></textarea>
@@ -80,14 +74,14 @@
         </div>
         <div class="contenu-contact">
             <div class="contact-box">
-                <a href="https://www.instagram.com" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" style="width:50px">
+                <a href="https://www.instagram.com/mes_petits_delices" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
                     <h3>Instagram</h3>
                 </a>
             </div>
             <div class="contact-box">
-                <a href="https://www.tiktok.com" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" style="width:50px">
+                <a href="https://www.tiktok.com/@mes_petits_delices" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
                     <h3>TikTok</h3>
                 </a>
             </div>
