--- a/index.html
+++ b/index.html
@@ -1111,10 +1111,11 @@
             div.innerHTML = `<h4>${name}</h4><p>"${msg}"</p>`;
             document.getElementById('avisDisplay').prepend(div);
             feedbackForm.reset();
-            alert('Votre expérience a bien été publiée ! ✨');
+            alert('Votre avis a bien été publiée ! ✨');
         });
 
         reveal();
     </script>
 </body>
 </html>
+
